--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_Performance.cshtml
@@ -903,7 +903,7 @@
                     // 呼叫 API ETF詳細頁 – 績效/淨值 - 市價/淨值走勢
                     var query = apiRequest('@ETFReturnChartDataApiUrl', params);
                     query.then((data) => {
-                        if (Object.keys(data).length != 0 && data.Body.respData) {
+                        if (Object.keys(data).length != 0 && data.Body.respData.length > 0) {
 
                             const mapData = data.Body.respData;
                             let mapMarketPriceData = mapData.map((item) => {
@@ -937,7 +937,7 @@
                                 turboThreshold: 0,
                             }];
 
-                            if (mapMarketPriceData) {
+                            if (mapMarketPriceData.length > 0) {
                                 let latestDate = mapMarketPriceData[mapMarketPriceData.length - 1].name;
                                 const updateDate = latestDate.replaceAll('-', '/');
                                 $('[data-update-date="market"]').text(updateDate);
