fix ：基金詳細頁bug fix

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -908,16 +908,16 @@
                                                     <span class="@(Model.FundRateOfReturn.TwoYearReturnTWD.DecimalNumberToStyle())">@Model.FundRateOfReturn.TwoYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
                                                 </td>
                                                 <td>
-                                                    <span class="@(Model.FundRateOfReturn.ThreeYearReturnOriginalCurrency.DecimalNumberToStyle())">@Model.FundRateOfReturn.ThreeYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
+                                                    <span class="@(Model.FundRateOfReturn.ThreeYearReturnTWD.DecimalNumberToStyle())">@Model.FundRateOfReturn.ThreeYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
                                                 </td>
                                                 <td>
-                                                    <span class="@(Model.FundRateOfReturn.FiveYearReturnOriginalCurrency.DecimalNumberToStyle())">@Model.FundRateOfReturn.FiveYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
+                                                    <span class="@(Model.FundRateOfReturn.FiveYearReturnTWD.DecimalNumberToStyle())">@Model.FundRateOfReturn.FiveYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
                                                 </td>
                                                 <td>
-                                                    <span class="@(Model.FundRateOfReturn.TenYearReturnOriginalCurrency.DecimalNumberToStyle())">@Model.FundRateOfReturn.TenYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
+                                                    <span class="@(Model.FundRateOfReturn.TenYearReturnTWD.DecimalNumberToStyle())">@Model.FundRateOfReturn.TenYearReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
                                                 </td>
                                                 <td>
-                                                    <span class="@(Model.FundRateOfReturn.InceptionDateReturnOriginalCurrency.DecimalNumberToStyle())">@Model.FundRateOfReturn.InceptionDateReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
+                                                    <span class="@(Model.FundRateOfReturn.InceptionDateReturnTWD.DecimalNumberToStyle())">@Model.FundRateOfReturn.InceptionDateReturnTWD.FormatDecimalNumber(2, needPercent: true)</span>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -1267,7 +1267,7 @@
                                 <div class="l-divideList__item">
                                     <div class="c-numerical">
                                         <div class="c-numerical__title c-numerical__title--dk"><span class="t-bold">三年</span></div>
-                                        <div class="c-numerical__content"><span class="@Model.FundAccumulationRateOfReturn.ThreeMonthReturnOriginalCurrency.DecimalNumberToStyle()">@Model.FundAccumulationRateOfReturn.ThreeMonthReturnOriginalCurrency.FormatDecimalNumber(2, needPercent: true)</span></div>
+                                        <div class="c-numerical__content"><span class="@Model.FundAccumulationRateOfReturn.ThreeYearReturnOriginalCurrency.DecimalNumberToStyle()">@Model.FundAccumulationRateOfReturn.ThreeYearReturnOriginalCurrency.FormatDecimalNumber(2, needPercent: true)</span></div>
                                     </div>
                                 </div>
                                 <div class="l-divideList__item">
