--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Compare/FundETFCompare.cshtml
@@ -224,8 +224,8 @@
                                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="shortTermTable">
                                             <option value="">排序</option>
-                                            <option value="基金名稱高至低" data-sorting-column="name" data-sorting-class="is-desc">基金名稱高至低</option>
-                                            <option value="基金名稱低至高" data-sorting-column="name" data-sorting-class="is-asc">基金名稱低至高</option>
+                                            <option value="基金名稱高至低" data-sorting-column="lable.id" data-sorting-class="is-desc">基金名稱高至低</option>
+                                            <option value="基金名稱低至高" data-sorting-column="lable.id" data-sorting-class="is-asc">基金名稱低至高</option>
                                             <option value="1日績效高至低" data-sorting-column="oneDayVal" data-sorting-class="is-desc">1日績效高至低</option>
                                             <option value="1日績效低至高" data-sorting-column="oneDayVal" data-sorting-class="is-asc">1日績效低至高</option>
                                             <option value="1週績效高至低" data-sorting-column="oneWeekVal" data-sorting-class="is-desc">1週績效高至低</option>
@@ -246,8 +246,8 @@
                                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="longTermTable">
                                             <option value="">排序</option>
-                                            <option value="基金名稱高至低" data-sorting-column="name" data-sorting-class="is-desc">基金名稱高至低</option>
-                                            <option value="基金名稱低至高" data-sorting-column="name" data-sorting-class="is-asc">基金名稱低至高</option>
+                                            <option value="基金名稱高至低" data-sorting-column="lable.id" data-sorting-class="is-desc">基金名稱高至低</option>
+                                            <option value="基金名稱低至高" data-sorting-column="lable.id" data-sorting-class="is-asc">基金名稱低至高</option>
                                             <option value="1年績效高至低" data-sorting-column="oneYearVal" data-sorting-class="is-desc">1年績效高至低</option>
                                             <option value="1年績效低至高" data-sorting-column="oneYearVal" data-sorting-class="is-asc">1年績效低至高</option>
                                             <option value="2年績效高至低" data-sorting-column="twoYearVal" data-sorting-class="is-desc">2年績效高至低</option>
@@ -409,8 +409,8 @@
                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="riskTable">
                             <option value="">排序</option>
-                            <option value="基金名稱高至低" data-sorting-column="name" data-sorting-class="is-desc">基金名稱高至低</option>
-                            <option value="基金名稱低至高" data-sorting-column="name" data-sorting-class="is-asc">基金名稱低至高</option>
+                            <option value="基金名稱高至低" data-sorting-column="lable.id" data-sorting-class="is-desc">基金名稱高至低</option>
+                            <option value="基金名稱低至高" data-sorting-column="lable.id" data-sorting-class="is-asc">基金名稱低至高</option>
                             <option value="風險屬性RR5至RR1" data-sorting-column="risk" data-sorting-class="is-desc">風險屬性RR5至RR1</option>
                             <option value="風險屬性RR1至RR5" data-sorting-column="risk" data-sorting-class="is-asc">風險屬性RR1至RR5</option>
                             <option value="Sharpe高至低" data-sorting-column="sharpe" data-sorting-class="is-desc">Sharpe高至低</option>
@@ -442,7 +442,7 @@
                                         <div class="c-table__title">
                                             <span>基金/ETF名稱</span>
                                             <a href="#"></a>
-                                            <a href="#" class="o-sorting" data-sorting-column="name"></a>
+                                            <a href="#" class="o-sorting" data-sorting-column="lable.id"></a>
                                         </div>
                                     </th>
                                     <th>
@@ -491,8 +491,8 @@
                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="netWorthTable">
                             <option value="">排序</option>
-                            <option value="基金名稱高至低" data-sorting-column="name" data-sorting-class="is-desc">基金名稱高至低</option>
-                            <option value="基金名稱低至高" data-sorting-column="name" data-sorting-class="is-asc">基金名稱低至高</option>
+                            <option value="基金名稱高至低" data-sorting-column="lable.id" data-sorting-class="is-desc">基金名稱高至低</option>
+                            <option value="基金名稱低至高" data-sorting-column="lable.id" data-sorting-class="is-asc">基金名稱低至高</option>
                             <option value="最新淨值高至低" data-sorting-column="netWorth" data-sorting-class="is-desc">最新淨值高至低</option>
                             <option value="最新淨值低至高" data-sorting-column="netWorth" data-sorting-class="is-asc">最新淨值低至高</option>
                             <option value="近3個月最高高至低" data-sorting-column="highest" data-sorting-class="is-desc">近3個月最高高至低</option>
@@ -517,7 +517,7 @@
                                     <th style="min-width: 200px;">
                                         <div class="c-table__title">
                                             <span>基金/ETF名稱</span>
-                                            <a href="#" class="o-sorting" data-sorting-column="name"></a>
+                                            <a href="#" class="o-sorting" data-sorting-column="lable.id"></a>
                                         </div>
                                     </th>
                                     <th>
@@ -554,8 +554,8 @@
                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="shareholdingTable">
                             <option value="">排序</option>
-                            <option value="基金名稱高至低" data-sorting-column="name" data-sorting-class="is-desc">基金名稱高至低</option>
-                            <option value="基金名稱低至高" data-sorting-column="name" data-sorting-class="is-asc">基金名稱低至高</option>
+                            <option value="基金名稱高至低" data-sorting-column="lable.id" data-sorting-class="is-desc">基金名稱高至低</option>
+                            <option value="基金名稱低至高" data-sorting-column="lable.id" data-sorting-class="is-asc">基金名稱低至高</option>
                         </select>
                     </div>
                 </div>
@@ -575,7 +575,7 @@
                                     <th>
                                         <div class="c-table__title">
                                             <span>基金/ETF名稱</span>
-                                            <a href="#" class="o-sorting" data-sorting-column="name"></a>
+                                            <a href="#" class="o-sorting" data-sorting-column="lable.id"></a>
                                         </div>
                                     </th>
                                     <th>
@@ -614,8 +614,8 @@
                         <!-- [data-sortingbox="true"]: 載入後自動綁定手機版排序客製樣式下拉功能 -->
                         <select class="o-sortingbox__input" data-sortingbox="true" data-sorting-linkto="baseTable">
                             <option value="">排序</option>
-                            <option value="基金名稱高至低" data-sorting-column="name" data-sorting-class="is-desc">基金名稱高至低</option>
-                            <option value="基金名稱低至高" data-sorting-column="name" data-sorting-class="is-asc">基金名稱低至高</option>
+                            <option value="基金名稱高至低" data-sorting-column="lable.id" data-sorting-class="is-desc">基金名稱高至低</option>
+                            <option value="基金名稱低至高" data-sorting-column="lable.id" data-sorting-class="is-asc">基金名稱低至高</option>
                             <option value="幣別高至低" data-sorting-column="CurrencyCode" data-sorting-class="is-desc">幣別高至低</option>
                             <option value="幣別低至高" data-sorting-column="CurrencyCode" data-sorting-class="is-asc">幣別低至高</option>
                         </select>
@@ -630,7 +630,7 @@
                                     <th class="u-rwdWidth" style="--pcWidth: 330px; --mbWidth: 176px;">
                                         <div class="c-table__title">
                                             <span>基金/ETF名稱</span>
-                                            <a href="#" class="o-sorting" data-sorting-column="name"></a>
+                                            <a href="#" class="o-sorting" data-sorting-column="lable.id"></a>
                                         </div>
                                     </th>
                                     <th>
