Add : 新增教育基金試算

--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -137,6 +137,7 @@
             "/themes/vendor/swiper/swiper-bundle.min.js",
             "/themes/vendor/highcharts/highstock.js",
             "/themes/vendor/highcharts/modules/accessibility.js",
+            "/themes/vendor/highcharts/modules/pattern-fill.js",
             "/themes/vendor/highcharts/indicators/indicators-all.js",
             "/themes/vendor/aso/aos.js",
             "/themes/vendor/datatables/datatables.min.js",
@@ -148,6 +149,7 @@
             "/themes/vendor/moment/moment.min.js",
             "/themes/vendor/noUiSlider/nouislider.min.js",
             "/themes/vendor/wnumb/wNumb.min.js",
+            "/themes/js/formula.min.js",
             "/themes/js/filter.min.js",
             "/themes/js/plugins.min.js",
             "/themes/js/main.min.js")
