fix : 長條圖日期utc調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -4192,6 +4192,9 @@
                         });
                         $('#scale_select').trigger('change');
                         Highcharts.chart("scale", {
+                            time: {
+                                useUTC: false
+                            },
                             chart: {
                                 type: 'column'
                             },
