--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -4139,6 +4139,9 @@
                         });
                         $('#scale_select').trigger('change');
                         Highcharts.chart("scale", {
+                            time: {
+                                useUTC: false
+                            },
                             chart: {
                                 type: 'column'
                             },
